deploy/flux-system/components/repo-homes.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flux-webhook
spec:
  selector:
    app: notification-controller
  ports:
  - name: http
    port: 9292

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
spec:
  ingressClassName: nginx
  rules:
  - host: flux-webhook.webwur.st
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flux-webhook
            port:
              number: 9292
  tls:
  - hosts:
    - flux-webhook.webwur.st
    secretName: flux-webhook-cert
